<resources>
    <string name="app_name">Multi Counter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_goup_list">GoupListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_set_number_dialog">SetNumberDialog</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="default_counter">Counter A</string>
    <string name="default_counter_group">Counter Group A</string>
    <string name="enter_counter_name">Enter name here</string>
    <string name="want_to_delete_it">want to delete it?</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset_confirmation">Reset Confirmation</string>
    <string name="want_to_reset_it">Reset. Is it OK?</string>
    <string name="enter_an_integer">Enter an integer</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="set_value">Set value</string>
    <string name="rename">Rename</string>
    <string name="start_recoding">Start recording</string>
    <string name="stop_recoding">Stop recording</string>
    <string name="counter_name">counter name</string>
    <string name="counter_group_name">counter group name</string>
    <string name="change_size">change size</string>
    <string name="select_size">select a size</string>
    <string name="large_size">Large</string>
    <string name="medium_size">Medium</string>
    <string name="small_size">small</string>


</resources>
